# G-Pub

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/examples/: config.json
docs/: ARCHITECTURE.md  CONFIG.md  EXTENDING.md  LOGITECH_PROTOCOL.md  WOOTING_PROTOCOL.md
include/gpub/: active_window_info.h  config.h  config_loader.h  corsair_status.h  factories.h  idevice_backend.h  iforeground_window_provider.h  logger.h  logitech_status.h  orchestrator.h  profile.h  rule.h  rules_engine.h  text_util.h
src/backends/corsair/: corsair_status.cpp
src/backends/logitech/: logitech_backend.cpp  logitech_backend.h
src/backends/wooting/: wooting_backend.cpp  wooting_backend.h
src/cli/: gpubctl_main.cpp  gpubd_main.cpp
src/core/: backend_factory.cpp  config_loader.cpp  logger.cpp  orchestrator.cpp  platform_factory.cpp  rules_engine.cpp
src/platform/linux/: README.md
src/platform/macos/: README.md
src/platform/windows/: win32_window_helpers.cpp  win32_window_helpers.h  windows_foreground_window_provider.cpp  windows_foreground_window_provider.h
src/tray/: gpub_tray_main.cpp
